--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,11 +11,11 @@
 			<div class="container-fluid">
 				<div class="row align-items-center justify-content-center justify-content-md-between">
 					<div class="col-md-6">
-						<a class="navbar-brand" th:href="@{/admin/photos}">
-							<img src="https://i.pinimg.com/originals/14/13/c0/1413c017e1527cba4c679c8559ae4f6b.png" class="mt-2" alt="Logo" width="250" height="150">
+						<a class="navbar-brand" th:href="@{/}">
+							<img th:src="@{/img/albums.svg}" alt="Logo" width="200" height="80">
 						</a>
 					</div>
-					<div class="mb-4 mb-md-0 col-md-6">
+					<div sec:authorize="hasAnyAuthority('SUPERADMIN','ADMIN')" class="mb-4 mb-md-0 col-md-6">
 						<form class="d-flex" method="GET" th:action="@{/admin/photos}">
 							<input type="text" class="form-control" th:value="${title}" name="title">
 							<button class="btn btn-sm btn-dark mx-2" type="submit"><i
