--- a/src/main/resources/templates/photo.html
+++ b/src/main/resources/templates/photo.html
@@ -27,9 +27,9 @@
 									<!--  richiedendo l'ID della foto -->
 									<div class="buttons">
 
-										<a th:href="@{/admin/photos/edit/{id} (id=*{id})}"
+										<a  sec:authorize="hasAuthority('ADMIN')" th:href="@{/admin/photos/edit/{id} (id=*{id})}"
 											class="btn btn-sm btn-warning"><i class="fa-solid fa-pen"></i>
-											Edit</a> <a th:href="@{/admin/photos/delete/{id} (id=*{id})}"
+											Edit</a> <a sec:authorize="hasAuthority('ADMIN')" th:href="@{/admin/photos/delete/{id} (id=*{id})}"
 											class="btn btn-sm btn-danger"><i
 											class="fa-solid fa-trash"></i> Delete</a>
 									</div>
@@ -55,8 +55,10 @@
 						</div>
 					</div>
 					<div class="col-12">
-						<a th:href="@{/admin/photos}" class="btn btn-sm btn-secondary"><i
-							class="fa-solid fa-arrow-left"></i> Back</a>
+						<a  sec:authorize="hasAuthority('ADMIN')" th:href="@{/admin/photos}" class="btn btn-sm btn-secondary"><i
+							class="fa-solid fa-arrow-left"></i> Indietro</a>
+						<a  sec:authorize="hasAuthority('SUPERADMIN')" th:href="@{/sadmin/photos}" class="btn btn-sm btn-secondary"><i
+							class="fa-solid fa-arrow-left"></i>Indietro</a>
 					</div>
 				</div>
 			</div>
